feat: add cli sbt module scaffold
New modules/cli/ module for standalone and remote CLI operations.
Not aggregated by root - run with 'sbt cli/run'.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>